[gd_scene load_steps=5 format=3 uid="uid://c4vry2k8p3nxm"]

[ext_resource type="Script" path="res://scripts/collectibles/treasure_chest.gd" id="1_chest"]
[ext_resource type="PackedScene" uid="uid://bqcpkajnefcj6" path="res://assets/models/quaternius_platformer/Level and Mechanics/Chest.gltf" id="2_chest_model"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_interact"]
height = 2.0
radius = 2.0

[sub_resource type="BoxShape3D" id="BoxShape3D_collision"]
size = Vector3(1.5, 1.2, 1.5)

[sub_resource type="LabelSettings" id="LabelSettings_prompt"]
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="TreasureChest" type="Node3D"]
script = ExtResource("1_chest")

[node name="ChestModel" parent="." instance=ExtResource("2_chest_model")]

[node name="ChestBody" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ChestBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("BoxShape3D_collision")

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_interact")

[node name="PromptLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
pixel_size = 0.005
billboard = 1
text = "Press E to open"
label_settings = SubResource("LabelSettings_prompt")

[node name="OpenParticles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
emitting = false
amount = 16
lifetime = 1.0
one_shot = true
explosiveness = 0.8
visibility_aabb = AABB(-2, -2, -2, 4, 4, 4)
